Fix overflow of textarea

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,7 +36,7 @@
   border: none;
   resize: none;
   outline: none;
-  width: 100%;
+  width: 90%;
 }
 
 a {
